Closed Bug 1064356 Opened 10 years ago Closed 10 years ago

Fix more bad implicit constructors in security

Categories

(Core :: Security, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla35

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

Details

Attachments

(1 file)

      No description provided.
Assignee: nobody → ehsan.akhgari
Blocks: explicit
Attachment #8485779 - Flags: review?(brian)
Comment on attachment 8485779 [details] [diff] [review]
Fix more bad implicit constructors in security

You have rs=briansmith for any future change that simply adds "explicit" to a constructor in PSM.
Attachment #8485779 - Flags: review?(brian) → review+
(In reply to Brian Smith (:briansmith, :bsmith, use NEEDINFO?) from comment #2)
> Comment on attachment 8485779 [details] [diff] [review]
> Fix more bad implicit constructors in security
> 
> You have rs=briansmith for any future change that simply adds "explicit" to
> a constructor in PSM.

Thanks!
https://hg.mozilla.org/mozilla-central/rev/26c1a9f357a1
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
Flags: qe-verify-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: