Bug 1064356 - Fix more bad implicit constructors in security; r=bsmith